update pdf lessons, fix some problems

--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -18,7 +18,7 @@
     <link href="{% static 'softTheme/css/nucleo-svg.css' %}" rel="stylesheet"/>
 
     <!-- Font Awesome Icons -->
-    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/98e7ad6c40.js" crossorigin="anonymous"></script>
     <link href="{% static 'softTheme/css/nucleo-svg.css' %}" rel="stylesheet"/>
 
     <!-- CSS Files -->
@@ -107,6 +107,10 @@
     .alert {
         border-radius: 1rem;
         background-image: none;
+    }
+    .btn {
+        display: flex;
+        align-items: center;
     }
 </style>
 
