add custom admin panel adjustments to fix CKEditor dark theme

--- a/interactions/templates/upload_pdf.html
+++ b/interactions/templates/upload_pdf.html
@@ -15,7 +15,7 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-lg-4 mb-4">
+    <div class="col-lg-4 mb-4 upload__container">
         <div class="card h-100" id="upload-pdf">
             <div class="card-header pb-0">
                 <h6>Upload a PDF</h6>
@@ -375,6 +375,10 @@
     }
     .errorlist {
         margin-bottom: 0 !important;
+    }
+
+    .upload__container {
+        width: 800px;
     }
 </style>
 {% endblock %}
