--- a/interactions/templates/view_slides_list.html
+++ b/interactions/templates/view_slides_list.html
@@ -1,5 +1,6 @@
 {% extends "base_generic.html" %}
 {% load static %}
+{% load custom_filters %}
 
 {% block extra_head %}
     <title>iaroapp - PDF List</title>
@@ -29,14 +30,15 @@
             <div class="card-body px-0 pt-0 pb-0">
                 <div class="list-group list-group-flush">
                     {% for category, pdfs in pdfs_by_category.items %}
-                        <div class="list-group-item">
+                        {% with all_completed=all_completed_categories|get_item:category %}
+                        <div class="list-group-item {% if all_completed %}bg-success{% endif %}">
                             <a data-bs-toggle="collapse" href="#pdfList_{{ forloop.counter }}" class="d-flex align-items-center">
                                 <h6 class="mb-0 mx-2 responsive__mobile-3">{{ category }}</h6>
                             </a>
                             <div id="pdfList_{{ forloop.counter }}" class="collapse" data-bs-parent="#accordion">
                                 <div class="list-group list-group-flush">
                                     {% for pdf in pdfs %}
-                                        <div class="list-group-item d-flex justify-content-between align-items-center">
+                                        <div class="list-group-item d-flex justify-content-between align-items-center {% if pdf.id in completed_pdfs %}bg-success{% endif %}">
                                             <div class="d-flex flex-column">
                                                 <h6 class="text-sm mb-0">{{ pdf.name }}</h6>
                                             </div>
@@ -46,12 +48,14 @@
                                 </div>
                             </div>
                         </div>
+                        {% endwith %}
                     {% endfor %}
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 
 <style>
     .card-body {
@@ -61,6 +65,11 @@
     .list-group-item-action:hover {
         text-decoration: none;
     }
+
+    .list-group-item {
+        border-radius: 0.5rem !important;
+    }
+
 </style>
 
 <script>
