--- a/iaroapp/static/css/styles.css
+++ b/iaroapp/static/css/styles.css
@@ -36,6 +36,14 @@ body.dark-page .navbar-brand-img {
   background-image: linear-gradient(310deg, #67748e 0%, #67748e 100%) !important; /* temporally changed for better readability before full recolor*/
 }
 
+.bg-gradient-secondary {
+  background-image: linear-gradient(310deg, #61589a 0%, #515a8f 100%);
+}
+
+
+
+
+
 .navbar-vertical .navbar-nav > .nav-item .nav-link.active .icon {
   background-image: linear-gradient(310deg, #ebede8 0%, #d4cac8 100%);
 }
