--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -167,8 +167,15 @@
                                 <div class="spinner"></div>
                             </div>
                         </ul>
-                        <div class="text-center d-flex justify-content-center mt-3">
-                            <button id="loadMoreBtn" class="btn w-100 bg-gradient-primary" style="display: none;">More</button>
+                        <div class="d-flex justify-content-between gap-2">
+                            <div class="text-center d-flex justify-content-center w-90 mt-3">
+                                <button id="loadMoreBtn" class="btn w-100 bg-gradient-primary more__btn" style="display: none;">
+                                    More
+                                </button>
+                            </div>
+                            <div class="text-center d-flex justify-content-center w-10 mt-3">
+                                <button id="refreshShiftsBtn" class="btn w-100 bg-gradient-primary"><i class="fa fa-refresh"></i></button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -419,7 +426,9 @@
         .shifts li {
             margin: 0 !important;
         }
-
+        .more__btn:hover {
+            transform: scale(1.01) !important;
+        }
     </style>
 
     <style>
