refactored users, added employees, refactored employy profile, fixed migrations, todo: test and fix signals, fix email reset pw

--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -168,15 +168,18 @@
                             </div>
                         </ul>
                         <div class="d-flex justify-content-between gap-2">
-                            <div class="text-center d-flex justify-content-center w-90 mt-3">
-                                <button id="loadMoreBtn" class="btn w-100 bg-gradient-primary more__btn" style="display: none;">
+                            <div class="text-center d-flex justify-content-center flex-grow-1">
+                                <button id="loadMoreBtn" class="btn w-100 bg-gradient-primary more__btn"
+                                        style="display: none;">
                                     More
                                 </button>
                             </div>
-                            <div class="text-center d-flex justify-content-center w-10 mt-3">
-                                <button id="refreshShiftsBtn" class="btn w-100 bg-gradient-primary"><i class="fa fa-refresh"></i></button>
+                            <div class="text-center d-flex justify-content-center" style="flex-basis: auto;">
+                                <button id="refreshShiftsBtn" class="btn bg-gradient-primary"><i
+                                        class="fa fa-refresh"></i></button>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
